--- a/as2-chenanf.ipynb
+++ b/as2-chenanf.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student Name: Chen-An Fan\n",
-    "\n",
+    "Student Name: Chen-An Fan\n"
     
    ]
   },
